<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="addNew">Add New</string>
    <string name="app_name">TimeSheet</string>
    <string name="cancel">Cancel</string>
    <string name="chooseReport">Choose Report\nTimeframe:</string>
    <string name="comments">Comments:</string>
    <string name="day">Day</string>
    <string name="defaultDate">mm/dd/yy</string>
    <string name="defaultDayDate">EEE\nmm/dd/yyyy</string>
    <string name="defaultInt">0</string>
    <string name="defaultText">default</string>
    <string name="defaultTime">0.00 h</string>
    <string name="delete_item">Delete Item</string>
    <string name="description">Description:</string>
    <string name="edit">Edit</string>
    <string name="fullName">Full Name:</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="minusButton">Minus Button</string>
    <string name="month">Month</string>
    <string name="notSet">Not Set</string>
    <string name="plusButton">Plus Button</string>
    <string name="preferences">Preferences</string>
  	<string name="prefProjectKey">pref_default_project</string>
  	<string name="prefProject">Default Project</string>
  	<string name="prefProjectSummary">The default project for editors</string>
  	<string name="prefDOWKey">pref_dow_start</string>
  	<string name="prefDOW">First Day of the Week</string>
  	<string name="prefDOWSummary">Sets the first day of the week</string>
    <string name="prefGeneral">General</string>
    <string name="prefGeneralKey">pref_general_key</string>
    <string name="prefHoursKey">pref_hours_key</string>
    <string name="prefHours">Weekly Working Hours</string>
    <string name="prefHoursSummary">The normal number of working hours for a week</string>
    <string name="popupWindowTitle">Choose Timeframe</string>
    <string name="project">Project:</string>
    <string name="projectEditor">Project Editor</string>
    <string name="quickAdd">Quick Add</string>
    <string name="rate">Rate:</string>
    <string name="report">Report</string>
    <string name="save">Save</string>
    <string name="shortCode">Short Code:</string>
    <string name="spinnerTitle">abSpinner</string>
    <string name="total">"Total: "</string>
    <string name="time">"Time: "</string>
    <string name="timeIn">Time In:</string>
    <string name="timeOut">Time Out:</string>
    <string name="timestampEditor">Timestamp Editor</string>
    <string name="week">Week</string>
    <string name="weekContaining">Week Containing</string>
    <string name="x">X</string>

    
</resources>