<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/prefGeneral"
        android:key="@string/prefGeneralKey">
	    <ListPreference
	        android:key="@string/prefProjectKey"
	        android:title="@string/prefProject"
	        android:summary="@string/prefProjectSummary"
	        android:defaultValue="1" />
	    <ListPreference 
	        android:key="@string/prefDOWKey"
	        android:title="@string/prefDOW"
	        android:summary="@string/prefDOWSummary"
	        android:dialogTitle="@string/prefDOW"
	        android:entries="@array/days"
	        android:entryValues="@array/daysVals"
	        android:defaultValue="SUNDAY" />
	    <EditTextPreference
	        android:key="@string/prefHoursKey"
	        android:title="@string/prefHours"
	        android:summary="@string/prefHoursSummary"
	        android:defaultValue="40.0" />
    </PreferenceCategory>
    
</PreferenceScreen>