<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rTotalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total" />

    <TextView
        android:id="@+id/rHoursTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/rTotalTV"
        android:text="@string/defaultTime" />

    <Button
        android:id="@+id/rMinusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/rDateEditText"
        android:background="@drawable/navigation_previous_item" />

    <Button
        android:id="@+id/rPlusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/navigation_next_item" />

    <EditText
        android:id="@+id/rDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/rPlusButton"
        android:clickable="true"
        android:ems="6"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="1"
        android:singleLine="false"
        android:text="@string/defaultDayDate" />

    <TextView
        android:id="@+id/rChooseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rDateEditText"
        android:text="@string/chooseReport"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/rChooserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/rChooseTV"
        android:layout_toRightOf="@+id/rChooseTV"
        android:text="@string/weekContaining" />
    
</RelativeLayout>