<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/hoursTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTime" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/minusPaddingLeft"
            android:background="@drawable/navigation_previous_item" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.58"
            android:ems="10"
            android:focusable="false"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navigation_next_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <Button
            android:id="@+id/quickAddButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:text="@string/quickAdd" />

        <Button
            android:id="@+id/addNewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:onClick="addNewHandler"
            android:text="@string/addNew" />
    </LinearLayout>
</RelativeLayout>