<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/projectShortTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/defaultText"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/projectFullTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/projectShortTextView"
            android:text="@string/defaultText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/listviewId"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/projectShortTextView" 
            android:text="@string/defaultInt" />

         <Button
             android:id="@+id/listviewEditButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/listviewHoursTV"
             android:background="@drawable/content_edit"
             android:focusable="false" />

         <TextView
             android:id="@+id/listviewHoursTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="@string/defaultTime"
             android:textAppearance="?android:attr/textAppearanceMedium" />

         <TextView
             android:id="@+id/projectIdTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/projectFullTextView"
             android:layout_toRightOf="@+id/listviewId"
             android:text="@string/defaultInt"
             android:visibility="invisible" />

</RelativeLayout>